--- a/index.css
+++ b/index.css
@@ -25,16 +25,17 @@
   border-radius: 20px;
   border-color: #592626;
   padding: 1rem;
+  font-size: large;
 }
 button {
   background-color: #592626;
   color: white;
   border-radius: 15px;
-  width: 200px;
+  width: 220px;
   height: 40px;
   margin: 0 auto;
   display: block;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 .footer {
   width: 100%;
@@ -53,7 +54,7 @@ button {
   font-size: 1.1rem;
 }
 p {
-  color: gray;
+  color: #592626;
   font-size: 1rem;
   margin-top: 0.5rem;
   text-align: center;
